# rl_playground

./: .gitmodules  readme.md
atari_dqn/: README.md  dqn-config.yml
blackjack-dqn/: README.md  blackjack.py  pyproject.toml
blackjack/sb3/: README.md  ppo.py
capture_chess/: readme.md
capture_chess/sb3/: ccenv.py  maskppo.py  pyproject.toml  readme.md
capture_chess/torch/: .gitignore  conv_qlearn.py  envtest.py  linear_net.py  linear_qlearn.py  precommit.sh  pyproject.toml  qlearn.py  readme.md  reinforce.py  simple_conv.py
capture_chess/torch/lib/: env.py  evaluator.py  nets.py  reinforce.py  torch_utils.py  trainer.py
capture_chess/torch/nets/: nets.py
capture_chess/torch/test/: test_board.py  test_capchess.py
capture_chess/torch/training/: trainer.py
cartpole-reinforce/: main.py  pyproject.toml
chess/: readme.md
chess/capture_chess/sb3/: ccenv.py  dqn.py  maskppo.py  pyproject.toml  readme.md
chess/cpp_chess/: .gitignore  CMakeLists.txt  README.md  build.sh  init_prompt.md  run.sh  train_value_network.py
chess/cpp_chess/.github/: copilot-instructions.md
chess/cpp_chess/include/: agent.h
chess/cpp_chess/src/: agent_random.cpp  game.cpp  leela_board_wrapper.cpp  main.cpp
chess/cpp_chess/src/lc0chess/: readme.md
chess/cpp_chess/src/lc0chess/chess/: readme.md
chess/cpp_chess/src/lc0chess/utils/: logging.cc
chess/cpp_chess/src/mystuff/cpp/: agent_random.cpp  andoma_agent.cpp  bot_fight.cpp  eval.cpp  game.cpp  greedy_chess_agent.cpp  leela_board_wrapper.cpp  main.cpp  torch_eval_approximator.cpp
chess/cpp_chess/src/mystuff/include/: agent.h  agent_random.h  andoma_agent.h  bot_fight.h  eval.h  game.h  greedy_chess_agent.h  leela_board_stub.h  leela_board_wrapper.h  torch_eval_approximator.h
chess/cpp_chess/test/: test_andoma.cpp  test_eval.cpp  test_leela_board_wrapper.cpp
chess/kaggledude/module1_2/: demo.py  pyproject.toml
chess/kaggledude/module3/: demo.py  pyproject.toml  readme.md
chess/kaggledude/module3/RLC/capture_chess/: agent.py
chess/kaggledude2/: capture-chess.py  envtest.py  module3.py  pyproject.toml  readme.md
chess/torch/: .gitignore  CLAUDE.md  Makefile  bot_showdown.py  full_impl_plan.md  impl_plan.md  impl_plan_next.md  plan_do_this_next.md  precommit.sh  pyproject.toml  readme.md  rlc-mcts.py  rlc_impl_notes.md  test_greedy_agent.py  test_value_network.py  train_value_network.py
chess/torch/.github/: copilot-instructions.md
chess/torch/lib/: agent.py  env.py  evaluate.py  greedy_agent.py  mcts.py  michniew.py
chess/torch/lib/agents/: greedy_agent.py
chess/torch/lib/agents/andoma/: andoma_agent.py  movegeneration.py
chess/torch/src/: azmp-prof.py  bot_showdown.py  pychess_perf_check.py  rank_bots.py  train_az.py  train_value_network.py
chess/torch/src/agents/: agent.py  greedy_agent.py  mcts.py  mctsnew.py  random.py
chess/torch/src/agents/alphazero/: az_nets.py  azmp.py  move_encoding.py
chess/torch/src/agents/andoma/: andoma_agent.py  movegeneration.py  readme.md
chess/torch/src/algs/: pmcts.py
chess/torch/src/env/: env.py
chess/torch/src/lib/: evaluate.py
chess/torch/src/lib/agents/: mcts.py
chess/torch/src/test/: test_andoma.py  test_env.py  test_greedy_agent.py  test_mcts.py
chess/torch/src/test/agents/: test_andoma.py  test_greedy_agent.py  test_mcts.py
chess/torch/src/test/agents/alphazero/: test_az_nets.py  test_azmp.py
chess/torch/src/test/algs/: test_pmcts.py
chess/torch/src/test/env/: test_env.py
chess/torch/src/test/utils/: test_michniew.py
chess/torch/src/utils/: evaluate.py  maths.py  play.py  ranker.py  types.py
chess/torch/test/: test_asdf.py  test_env.py  test_greedy_agent.py  test_mcts.py  test_michniew.py
connect4/: .gitignore  CLAUDE.md  Makefile  README.md  claude_follow_instructions.sh  pyproject.toml
frozenlake/: README.md  pyproject.toml
frozenlake-dqn/: frozen.py
frozenlake-qlearn/: README.md  hello.py
lunarlander/: .gitignore  README.md  lunar.py
lunarlander-optuna/: .gitignore  README.md  lunar.py  pyproject.toml
torch_tute/: go.py  pyproject.toml
torch_vs_torchsharp/: readme.md
ttt/: .gitignore  CLAUDE.md  Makefile  README.md  bot-showdown.py  dqn-tuna.py  dqn.py  dqn.trials.csv  main.py  mask_ppo.py  mcts.py  mcts_training.log.md  mctsdemo.py  opt_tabular.py  precommit.sh  pyproject.toml  query.py  sb3-dqn-tuna.py  sb3-dqn.py  sb3-mask_ppo.py  sb3-ppo.py  tabular-param-search.py  tabular.py  tabular_vs_nn_torch.py  torch-greedy-v-mcts.py  torch-greedy-v.py  torch-greedy-v2.py  torch-greedy-v3.py  torch-nn-learn_tabular_vals.py  torch_learn_tabular_vals.py
ttt/src/: bot-showdown.py  exp_ttt_gpu.py  query.py  rank_bots.py  sb3-dqn-tuna.py  tabular-param-search.py  torch-nn-learn_tabular_vals.py  train_az.py  train_az_mp.py
ttt/src/agents/: agent.py  alphazero.py  alphazero_mp.py  az_nets.py  compare.py  mcts.py  perfect.py  qlearn.py  random.py  sarsa.py  sb3_dqn.py  sb3_maskppo.py  sb3ppo.py  tab_greedy_v.py  tab_mcts.py  torch_nn_greedy_v.py
ttt/src/algs/: az_evaluators.py  az_mcts.py
ttt/src/az_scratch/: az_tabnet.py  can_nn_approx.py  ensure_project_path.py
ttt/src/test/agents/: test_alphazero.py  test_alphazero_mp.py  test_az_tabnet.py  test_fast_agents.py  test_tab_greedy_v.py  test_tab_mcts.py
ttt/src/test/algs/: test_az_mcts.py  test_mcts.py
ttt/src/test/ttt/: test_env.py
ttt/src/test/utils/: test_maths.py  test_qtable.py  test_ranker.py
ttt/src/train_bots/: train_az.py
ttt/src/ttt/: env.py
ttt/src/utils/: epsilon.py  maths.py  paths.py  qtable.py  ranker.py  torch_device.py  tuna.py
ttt/tabular/: tabular-param-search.py
ttt/test/: test_agents.py  test_env.py  test_fast_agents.py  test_mcts.py  test_mcts2.py  test_tab_mcts.py  test_tttenv.py  test_tttenv2.py
ttt/ttt/: env.py  env2.py
ttt/ttt/agents/: agent.py  compare.py  mcts.py  mcts2.py  nn_greedy_v.py  perfect.py  qlearn.py  random.py  sarsa.py  sb3_dqn.py  sb3_maskppo.py  sb3ppo.py  tab_greedy_v.py  tab_mcts.py  torch_greedy_v.py  torch_nn_greedy_v.py  torch_nn_greedy_v_mcts.py
ttt/utils/: epsilon.py  torch_device.py  tuna.py
(+84 files in other folders)
