[project]
name = "ttt-dqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.2.2",
    "optuna-dashboard>=0.17.0",
    "optuna>=4.2.1",
    "plotly>=6.0.0",
    "sb3-contrib>=2.5.0",
    "scikit-learn>=1.6.1",
    "stable-baselines3>=2.5.0",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
ignore = ["E701"]  # multiple statements per line

