[project]
name = "kaggledude2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "numpy>=2.2.3",
    "python-chess>=1.999",
    "rlc",
    "ruff>=0.11.9",
    "torch>=2.6.0",
]

[tool.uv.sources]
rlc = { git = "https://github.com/arjangroen/RLC.git" }
