[project]
name = "torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "pytest>=8.3.5",
    "rlc",
    "ruff>=0.11.10",
]

[tool.uv.sources]
rlc = { git = "https://github.com/arjangroen/RLC.git" }
