[project]
name = "woz_torch_chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "ty>=0.0.17",
    "types-tqdm>=4.67.0.20250516",
]
