[project]
name = "module3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.8.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "python-chess>=1.999",
    "rlc",
    "tensorflow>=2.18.0",
]

[tool.uv.sources]
rlc = { git = "https://github.com/arjangroen/RLC.git" }
